Fix overlap of rouge and copy button

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -333,8 +333,8 @@ code {
 // Language labels - only for block code
 div.highlighter-rouge::after {
   position: absolute;
-  top: 0.5rem;
-  right: 0.75rem;
+  top: 0.75rem;
+  right: 3rem;
   background: rgba($raif-primary, 0.1);
   color: $raif-primary;
   padding: 0.25rem 0.5rem;
